--- a/Week10/Dockerfile
+++ b/Week10/Dockerfile
@@ -1,12 +1,12 @@
-#single stage dockerfile
-FROM golang:1.23
-
+# Multi-stage dockerfile
+FROM golang:1.23 AS builder
 WORKDIR /app
-
 COPY . .
-
 RUN go build -o myApp .
 
-EXPOSE 80
 
+FROM alpine:3.20
+WORKDIR /server
+COPY --from=builder /app/myApp .
+EXPOSE 80
 CMD ["./myApp"]
